Remove about us from index

--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -48,7 +48,7 @@
                     </p>
                     <ul>
                         <li>
-                            <i class="bx bx-store-alt"></i>
+                            <i class="bx bx-store-alt" style=" margin-left: 32px;"></i>
                             <div>
                                 <h5>
                                     Streamlined Project Management
@@ -61,7 +61,7 @@
                             </div>
                         </li>
                         <li>
-                            <i class="bx bx-images"></i>
+                            <i class="bx bx-images" style=" margin-left: 32px;"></i>
                             <div>
                                 <h5>
                                     A Dedicated Team of Experts
@@ -193,7 +193,7 @@ else
                                     ، سوقك المستهدف، والسمات النفسية لعملائك.
                                 </p>
                             </div>
-                            <i class="bx  ml-2 bx-store-alt"></i>
+                            <i class="bx  ml-2 bx-store-alt" style=" margin-left: 32px;"></i>
                         </li>
                         <li class="text-right">
                             
@@ -206,7 +206,7 @@ else
                                     أن نوظف محترفين ذوي خبرة ومهارات عالية.
                                 </p>
                             </div>
-                            <i class="bx ml-2 bx-images"></i>
+                            <i class="bx ml-2 bx-images" style=" margin-left: 67px;"></i>
                         </li>
                     </ul>
                     <p>
