change eng to english

--- a/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
@@ -79,7 +79,7 @@
                     <div class="top-nav right">
                         <ul class="right chevron " style='margin-bottom:unset !important'>
 
-                             <li><a onclick="toggleLanguage()"  style="padding: 1.2rem 1rem !important;">Eng</a></li> 
+                             <li><a onclick="toggleLanguage()"  style="padding: 1.2rem 1rem !important;">English</a></li> 
 
                             <li><a style=" color:red" class="nav-link scrollto" asp-area="Admin" asp-controller="Home" asp-action=""> لوحة التحكم </a></li>
                          
