add About us dynamic

--- a/ALTC-Site/Areas/Admin/Views/StaticData/Create.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/StaticData/Create.cshtml
@@ -41,6 +41,11 @@
                 <textarea asp-for="aboutus" id="tiny" class="" style="width: 100%; height: 500px;"></textarea>
                 <span asp-validation-for="aboutus" class="text-danger"></span>
             </div>
+            <div class="" >
+                <label asp-for="lang"></label>
+                <input asp-for="lang" class="" ></input>
+                <span asp-validation-for="lang" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
