--- a/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
@@ -82,7 +82,7 @@
                             <li><a onclick="toggleLanguage()" style="padding: 1.2rem 1rem !important;">العربية</a></li>
 
 
-                            <li><a style="color:red; padding: 1.2rem 1rem !important;" class="nav-link scrollto" asp-area="Admin" asp-controller="Home" asp-action="">Dashboard</a></li>
+                            <li><a style="color:red; padding: 1.2rem 1rem !important;" class="nav-link scrollto" asp-area="Admin" asp-controller="Home" asp-action="Index">Dashboard</a></li>
                             <li><a style="padding: 1.2rem 1rem !important;" href="@Url.Action("Index", "Home", new { dir = dir, lang = lang })">Home</a></li>
                             <li><a style="padding: 1.2rem 1rem !important;" href="@Url.Action("Index", "About", new { dir = dir, lang = lang })">About Us</a></li>
                             <li><a style="padding: 1.2rem 1rem !important;" href="@Url.Action("Index", "Contact", new { dir = dir, lang = lang })">Contact</a></li>
