--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -24,60 +24,23 @@
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>Bio</h2>
+                <h2>About ALTC </h2>
 
-                <h3>Find Out More <span> ALTC </span></h3>
-                <p>
-                    Hello! We are Arab Leading Technology
-                    Top-rated Digital Marketing, Web, And Mobile App Development Company.
-                </p>
             </div>
 
             <div class=" d-flex; justify-content-right;" class="">
 
-                <div style="width:100%" class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <h3>
-                        Big Ideas, creative people, new technologies
-                        .
-                    </h3>
-                    <p class="fst-italic">
-                        A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range
-                        of professional services such as Digital transformation, web design, web development, mobile app development,
-                        search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
-                        social media marketing, video production, content creation, email marketing, and marketing automation.
-                    </p>
-                    <ul>
-                        <li>
-                            <i class="bx bx-store-alt" style=" margin-left: 32px;"></i>
-                            <div>
-                                <h5>
-                                    Streamlined Project Management
-                                </h5>
-                                <p>
-                                    You want results. We've found that the best way to get them is to do research upfront -
-                                    about your business, your competitors
-                                    , your target market, and the psychographics of your customers.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="bx bx-images" style=" margin-left: 32px;"></i>
-                            <div>
-                                <h5>
-                                    A Dedicated Team of Experts
-                                </h5>
-                                <p>
-                                    Because our customers expect the best, we employ only the best people. Our rigorous qualification
-                                    process ensures that we employ experienced and highly skilled professionals.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                    <p>
-                        Your company's IT systems are critical to its success. We are confident that we can provide you with quality Web & Mobile Solutions, Digital Content,
-                        and Digital Marketing services in ALTC that will benefit your business.
-                    </p>
-                </div>
+                <section id="about" class="about section-bg">
+
+                    @foreach (var item in Model)
+                    {
+                        <div class="container" data-aos="fade-up">
+                            @Html.Raw(item.aboutus)
+                        </div>
+
+                    }
+
+                </section><!-- End About Section -->
             </div>
 
         </div>
@@ -159,61 +122,23 @@ else
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>السيرة الذاتية</h2>
-                <h3>اعرف المزيد <span>عن ALTC</span></h3>
-                <p>
-                    مرحبًا! نحن Arab Leading Technology
-                    شركة رائدة في مجال التسويق الرقمي، وتطوير الويب، وتطوير تطبيقات الهواتف المحمولة.
-                </p>
+                <h2>من نحن  </h2>
+
             </div>
 
             <div class=" d-flex; justify-content-right;" class="">
-             
-                <div style="width:100%" class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <h3 class="text-right">
-                        أفكار كبيرة، أشخاص مبدعين، تقنيات جديدة
-                    </h3>
-                    <p class="fst-italic">
-                        وكالة رائدة في مجال حلول الويب الشاملة والتسويق الرقمي، نقدم مجموعة شاملة
-                        من الخدمات المهنية مثل التحول الرقمي، تصميم الويب، تطوير الويب، تطوير تطبيقات الهواتف المحمولة،
-                        تحسين محركات البحث (SEO)، حلول التجارة الإلكترونية، تصميم واجهة المستخدم/تجربة المستخدم (UI/UX)،
-                        الإعلان بالدفع للنقر (PPC)، التسويق عبر وسائل التواصل الاجتماعي، إنتاج الفيديو، إنشاء المحتوى،
-                        التسويق عبر البريد الإلكتروني، وتسويق الآلي.
-                    </p>
-                    <ul>
-                        <li class="text-right">
-                            
-                            <div>
-                                <h5 class="text-right">
-                                    إدارة المشاريع بشكل مبسط
-                                </h5>
-                                <p>
-                                    تريد النتائج. لقد وجدنا أن أفضل طريقة للحصول عليها هي إجراء البحث مسبقًا -
-                                    حول عملك، منافسيك
-                                    ، سوقك المستهدف، والسمات النفسية لعملائك.
-                                </p>
-                            </div>
-                            <i class="bx  ml-2 bx-store-alt" style=" margin-left: 32px;"></i>
-                        </li>
-                        <li class="text-right">
-                            
-                            <div>
-                                <h5 class="text-right">
-                                    فريق متخصص من الخبراء
-                                </h5>
-                                <p>
-                                    لأن عملائنا يتوقعون الأفضل، نستخدم فقط أفضل الأشخاص. يضمن عملية التأهيل الصارمة لدينا
-                                    أن نوظف محترفين ذوي خبرة ومهارات عالية.
-                                </p>
-                            </div>
-                            <i class="bx ml-2 bx-images" style=" margin-left: 67px;"></i>
-                        </li>
-                    </ul>
-                    <p>
-                        أنظمة تكنولوجيا المعلومات في شركتك هي حاسمة لنجاحها. نحن واثقون من أننا يمكننا توفير حلول ويب وجوال
-                        ومحتوى رقمي عالية الجودة، وخدمات تسويق رقمي في ALTC ستعود بالفائدة على عملك.
-                    </p>
-                </div>
+
+                <section id="about" class="about section-bg">
+
+                    @foreach (var item in Model)
+                    {
+                        <div class="container" data-aos="fade-up">
+                            @Html.Raw(item.aboutus)
+                        </div>
+
+                    }
+
+                </section><!-- End About Section -->
             </div>
 
         </div>
