--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -296,7 +296,7 @@ else
                 document.getElementById("team-members").innerHTML = result;
             },
             error: function (xhr, status, error) {
-                //console.log("kk");
+               @*  //console.log("kk"); *@
                 console.log(error);
             }
         });
