--- a/ALTC-Site/Areas/Admin/Views/Team/Edit.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Team/Edit.cshtml
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Photo" class="control-label"></label>
-                        <input asp-for="Photo" class="form-control" />
+                        <input asp-for="Photo" class="form-control" accept=".jpg, .jpeg, .png" />
                         <span asp-validation-for="Photo" class="text-danger"></span>
                     </div>
 
