--- a/ALTC-Site/Views/Request/Create.cshtml
+++ b/ALTC-Site/Views/Request/Create.cshtml
@@ -11,12 +11,12 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <label asp-for="Name" class="control-label">الاسم</label>
-                    <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control" required />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="col-12 col-md-6">
                     <label asp-for="Phone" class="control-label">رقم الهاتف</label>
-                    <input asp-for="Phone" class="form-control" />
+                    <input asp-for="Phone" class="form-control" required />
                     <span asp-validation-for="Phone" class="text-danger"></span>
                 </div>
             </div>
@@ -24,12 +24,12 @@
 
         <div class="form-group">
             <label asp-for="Email" class="control-label">البريد الالكتروني</label>
-            <input asp-for="Email" class="form-control" />
+            <input asp-for="Email" class="form-control" required />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="File" class="control-label">الملف</label>
-            <input asp-for="File" class="form-control" />
+            <input asp-for="File" class="form-control" required />
             <span asp-validation-for="File" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -48,7 +48,7 @@ else
             <div class="row">
                 <div class="col-12 col-md-6">
                     <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" class="form-control" required />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="col-12 col-md-6">
@@ -61,12 +61,12 @@ else
 
         <div class="form-group">
             <label asp-for="Email" class="control-label"></label>
-            <input asp-for="Email" class="form-control" />
+            <input asp-for="Email" class="form-control" required />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="File" class="control-label"></label>
-            <input asp-for="File" class="form-control" />
+            <label  asp-for="File" class="control-label"></label>
+            <input asp-for="File" class="form-control" accept=".rar, application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document" required />
             <span asp-validation-for="File" class="text-danger"></span>
         </div>
         <div class="form-group">
