--- a/ALTC-Site/Views/Contact/Index.cshtml
+++ b/ALTC-Site/Views/Contact/Index.cshtml
@@ -277,7 +277,7 @@ else
 				<h3><span>اتصل بنا</span></h3>
 				<p>
 					دعونا نعمل معًا
-					نحن نحب أن نستمع إلى متطلباتك.
+					نحن نحب أن نستمع إلى متطلباتك
 				</p>
 			</div>
 
