--- a/ALTC-Site/Views/Request/Create.cshtml
+++ b/ALTC-Site/Views/Request/Create.cshtml
@@ -45,8 +45,9 @@
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label id="file-input-label" style=" display: flex !important ; justify-content: end;" asp-for="File" class="control-label">اختار الملف</label>
+        <div style="margin-botton:10px;" class="form-group">
+            <label class="text-right control-lable" dir="rtl">الملف</label>
+
             <label id="file-input-label" for="File" class="text-right" dir="rtl">تحميل </label>
 
             
