--- a/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
@@ -159,7 +159,7 @@
             <!-- التذييل السفلي -->
             <section class="padding background-dark full-width">
                 <div class="text-center">
-                    <p class="text-size-12">حقوق النشر 2023، تصميم الرؤية - حديقة الرسومات</p>
+                    <p class="text-size-12">حقوق النشر 2023</p>
                   
                 </div>
             </section>
