--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -28,13 +28,13 @@
 
             </div>
 
-            <div class=" d-flex; justify-content-right;" class="">
+            <div style="margin-top:62px" class="  d-flex; justify-content-right;" class="">
 
-                <section id="about" class="about section-bg">
+                <section  id="about" class="about section-bg">
 
                     @foreach (var item in Model)
                     {
-                        <div class="container" data-aos="fade-up">
+                        <div  class="container" data-aos="fade-up">
                             @Html.Raw(item.aboutus)
                         </div>
 
