--- a/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
@@ -216,8 +216,8 @@
             <!-- Bottom Footer -->
             <section class="padding background-dark full-width">
                 <div class="text-center">
-                    <p class="text-size-12">Copyright 2019, Vision Design - graphic zoo</p>
-                    <p class="text-size-12">All images is purchased from Bigstock. Do not use the images in your website.</p>
+                    <p class="text-size-12">Copyright 2023, ALTC </p>
+             
                 </div>
             </section>
         </footer>
