--- a/ALTC-Site/Areas/Admin/Views/Services/GetAll.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Services/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ALTC_WebSite.Models.Department>
+﻿@model IEnumerable<ALTC_WebSite.Models.Service>
 
 @{
     ViewData["Title"] = "GetAll";
@@ -12,15 +12,15 @@
 <table class="table">
     <thead>
         <tr>
-           
+         
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Describtion)
+                @Html.DisplayNameFor(model => model.Details)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FileName)
+                @Html.DisplayNameFor(model => model.lang)
             </th>
             <th></th>
         </tr>
@@ -28,23 +28,25 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-         
+          
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Describtion)
+                @Html.DisplayFor(modelItem => item.Details)
             </td>
-               
-                <td>
-                <img style="width:50%;" src="/Files/@Html.DisplayFor(modelItem => item.FileName)" />
-                </td>
-
             <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id })
-              
-                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                @Html.DisplayFor(modelItem => item.lang)
             </td>
+
+                <td>
+                    <img style="width:50%;" src="/Files/@Html.DisplayFor(modelItem => item.FileName)" />
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id })
+
+                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                </td>
         </tr>
 }
     </tbody>
