--- a/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -204,6 +204,28 @@
                                 </p>
                             </a>
                         </li>
+                    <li class="nav-item">
+                        <a asp-action="Create" asp-controller="Services" asp-area="Admin" class="nav-link">
+                            <i class="nav-icon far fa-envelope" style="color:dodgerblue"></i>
+
+
+                            <p>
+                                Add Services
+
+                            </p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="GetAll" asp-controller="Services" asp-area="Admin" class="nav-link">
+                            <i class="nav-icon far fa-envelope" style="color:dodgerblue"></i>
+
+
+                            <p>
+                                All Services
+
+                            </p>
+                        </a>
+                    </li>
                     </ul>
 
                 </nav>
