--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -20,7 +20,7 @@
 @if (dir == "ltr")
 {
 
-    <section id="about" class="about section-bg">
+    <section style="margin-top:62px" id="about" class="about section-bg">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -28,7 +28,7 @@
 
             </div>
 
-            <div style="margin-top:62px" class="  d-flex; justify-content-right;" class="">
+            <div  class="  d-flex; justify-content-right;" >
 
                 <section  id="about" class="about section-bg">
 
@@ -118,7 +118,7 @@ else
 {
 
     <!-- ======= قسم حول ======= -->
-    <section id="about" class="about section-bg">
+    <section style="margin-top:62px" id="about" class="about section-bg">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
