--- a/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutLtr.cshtml
@@ -66,16 +66,16 @@
     <!-- PREMIUM FEATURES BUTTON -->
     <div id="page-wrapper">
         <!-- HEADER -->
-        <header  role="banner" class="position-absolute margin-m-top-0 margin-s-top-0">
+        <header  role="banner" class="position-absolute margin-m-top-0 margin-s-top-0 ">
             <!-- Top Navigation -->
-            <nav class="background-transparent background-transparent-hightlight full-width sticky     box-shadow: 0px 1px 4px whitesmoke;" style="display: flex; align-items: center; line-height: 80%;">
-                <div class="s-12 l-2">
+            <nav style="box-shadow: 3px 3px 2px rgba(0, 0, 0, .05); display: flex;  align-items: center !important;" class="background-transparent background-transparent-hightlight full-width sticky     box-shadow: 0px 1px 4px whitesmoke;" style="display: flex; align-items: center; line-height: 80%;">
+                <div style="   " class="s-12 l-2 media-logo">
                     <a href="" class="logo">
                         <img style="width:43%" class="logo-before" src="~/assets/img/altc-logo2.png" alt="">
                         <img style="width:43%" class="logo-after" src="~/assets/img/altc-logo2.png" alt="">
                     </a>
                 </div>
-                <div class="s-12 l-10">
+                <div class="s-12 l-10" style="width: 100%;">
                     <div class="top-nav right">
                         <ul class="right chevron " style='margin-bottom:unset !important'>
                            
