--- a/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
@@ -68,8 +68,8 @@
       
         <header role="banner" class="position-absolute margin-m-top-0 margin-s-top-0">
             <!-- Top Navigation -->
-            <nav class="z-index:99999999; background-transparent background-transparent-hightlight full-width sticky     box-shadow: 0px 1px 4px whitesmoke;" style="display: flex; align-items: center; line-height: 80%;">
-                <div class="s-12 l-2">
+            <nav  class="z-index:99999999; background-transparent background-transparent-hightlight full-width sticky    " style="display: flex; align-items: center; line-height: 80%;  box-shadow: 3px 3px 2px rgba(0, 0, 0, .05);">
+                <div class="s-12 l-2 media-logo">
                     <a href="" class="logo">
                         <img style="width:43%" class="logo-before" src="~/assets/img/altc-logo2.png" alt="">
                         <img style="width:43%" class="logo-after" src="~/assets/img/altc-logo2.png" alt="">
