--- a/ALTC-Site/Views/Home/Index.cshtml
+++ b/ALTC-Site/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
 {
    
 
-<div style="margin-top:62px;"></div>
+<div style="margin-top:61px;"></div>
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
@@ -76,8 +76,8 @@
             <div class="row">
                 @foreach (var item in Model)
                 {
-                    <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                        <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                    <div  class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-2">
+                        <div style="margin: 20px 0 !important;"  class="icon-box" data-aos="fade-up" data-aos-delay="100">
                             <div class="icon"><img src="/Files/@item.FileName" /></div>
                             <h4 class="title">
                                 <a href="">
